--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,2 +1,19 @@
-.App {
+.app {
+}
+
+.app__cover {
+  background: black;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  visibility: hidden;
+  opacity: 0;
+  transition: all 0.3s;
+}
+
+.app__cover_visible {
+  visibility: visible;
+  opacity: 0.3;
 }
