--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -1,12 +1,14 @@
 .search-form {
-  padding: 70px 70px 55px;
+  margin: 70px var(--side-padding-l) 10px;
+  padding-bottom: 40px;
+  border-bottom: 1px solid rgb(170, 170, 170, 0.2);
 }
 
 .search-form__search-group {
   display: flex;
   justify-content: space-between;
   border: 1.5px solid rgb(170, 170, 170, 0.2);
-  border-radius: 8px;
+  border-radius: var(--border-radius-m);
   padding: 10px 10px 10px 25px;
 }
 
@@ -47,7 +49,7 @@
   height: 20px;
   background: rgb(170, 170, 170);
   display: block;
-  border-radius: 16px;
+  border-radius: var(--border-radius-l);
   position: relative;
   text-wrap: nowrap;
   box-shadow: 0px 4px 4px rgba(50, 50, 71, 0.08),
@@ -70,7 +72,7 @@
   width: 16px;
   height: 16px;
   background: var(--success-color);
-  border-radius: 90px;
+  border-radius: var(--border-radius-xl);
   transition: 0.3s;
 }
 
@@ -85,4 +87,41 @@
 
 .search-form__switch-label:active:after {
   width: 20px;
+}
+
+@media screen and (max-width: 900px) {
+  .search-form {
+    margin: 70px 30px 10px;
+    padding-bottom: 50px;
+  }
+}
+
+@media screen and (max-width: 420px) {
+  .search-form {
+    margin: 70px 14px 10px;
+    padding-bottom: 60px;
+  }
+
+  .search-form__search-group {
+    padding: 6px 6px 6px 12px;
+  }
+
+  .search-form__serch-input {
+    font-size: 16px;
+    line-height: 16px;
+    width: 65%;
+  }
+
+  .search-form__serch-btn {
+    min-width: 80px;
+    height: 44px;
+  }
+
+  .search-form__switch-label {
+    font-size: 11px;
+  }
+
+  .search-form__switch {
+    margin-right: 44px;
+  }
 }
