--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ body {
   --success-color: #2be080;
   --error-color: #ff3055;
   --muted-text-color: #a0a0a0;
+  --input-background: #f9f9f9;
   --side-padding-l: 70px;
   --border-radius-xs: 3px;
   --border-radius-s: 5px;
