--- a/src/components/More/More.css
+++ b/src/components/More/More.css
@@ -15,6 +15,10 @@
   border-radius: var(--border-radius-s);
 }
 
+.more__btn:hover {
+  opacity: var(--hover-opacity);
+}
+
 @media screen and (max-width: 900px) {
   .more {
     padding: 50px 30px 80px;
