--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url(./vendor/fonts/inter.css);
+@import url(./vendor/normalize.css);
 
 body {
   margin: 0;
@@ -21,4 +22,5 @@ body {
   --border-radius-m: 10px;
   --border-radius-l: 16px;
   --border-radius-xl: 30px;
+  --hover-opacity: 0.8;
 }
