--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -19,14 +19,15 @@
   text-align: center;
   letter-spacing: -0.04em;
   margin: 26px auto 0;
-  width: 460px;
+  max-width: 460px;
 }
 
 .techs__list {
   list-style: none;
   margin: 100px auto 0;
   padding: 0;
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 84px);
   justify-content: center;
   gap: 10px;
 }
@@ -87,8 +88,6 @@
   }
 
   .techs__list {
-    flex-wrap: wrap;
-    justify-content: normal;
     margin-top: 50px;
     width: 178px;
   }
