--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -3,6 +3,8 @@
   flex-direction: column;
   justify-content: space-between;
   min-height: 100vh;
+  max-width: 1280px;
+  margin: 0 auto;
 }
 
 .app__cover {
