--- a/src/components/AuthFormInput/AuthFormInput.css
+++ b/src/components/AuthFormInput/AuthFormInput.css
@@ -17,7 +17,8 @@
 }
 
 .auth-form-input__input:focus-visible {
-  outline: none;
+  outline: 1.5px solid rgb(170, 170, 170, 0.4);
+  box-shadow: var(--box-shadow);
 }
 
 .auth-form-input__input_type_err {
