--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -9,7 +9,7 @@
 
 .app__cover {
   background: black;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
@@ -20,7 +20,49 @@
   z-index: 2;
 }
 
-.app__cover_visible {
+.app__alert {
+  position: fixed;
+  top: -100px;
+  left: 25%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 16px;
+  text-align: center;
+  background: var(--light-color);
+  width: 50%;
+  min-height: 100px;
+  padding: 20px;
+  border: 1.5px solid rgb(170, 170, 170, 0.4);
+  border-radius: var(--border-radius-m);
+  box-sizing: border-box;
+  box-shadow: var(--box-shadow);
+  visibility: hidden;
+  opacity: 0;
+  transition: all 0.3s;
+}
+
+.app__alert_visible {
+  top: 20px;
   visibility: visible;
-  opacity: 0.3;
+  opacity: 1;
+}
+
+@media screen and (max-width: 900px) {
+  .app__cover_visible {
+    visibility: visible;
+    opacity: 0.3;
+  }
+
+  .app__alert {
+    width: 70%;
+    left: 15%;
+  }
+}
+
+@media screen and (max-width: 420px) {
+  .app__alert {
+    width: 90%;
+    left: 5%;
+  }
 }
