--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -3,6 +3,7 @@
   background: #fdfdfd;
   box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.08);
   border-radius: var(--border-radius-s);
+  cursor: pointer;
 }
 
 .movies-card__header {
@@ -16,6 +17,10 @@
   font-weight: 500;
   font-size: 15px;
   margin: 0;
+  width: 75%;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .movies-card__duration {
@@ -51,7 +56,7 @@
   opacity: var(--hover-opacity);
 }
 
-.movies-card__btn_type_check {
+.movies-card__btn_type_saved {
   background: var(--error-color);
   border-radius: var(--border-radius-xl);
   background-image: url(../../images/icon__check.svg);
@@ -66,7 +71,7 @@
 
 .movies-card__btn_type_delete {
   background: inherit;
-  background-image: url(../../images/icon__close.svg);
+  background-image: url(../../images/icon__close_black.svg);
   background-size: 10px;
   background-position: center;
   background-repeat: no-repeat;
