--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -14,8 +14,7 @@
 
 .search-form__search-group_focused {
   border-color: rgb(170, 170, 170);
-  box-shadow: 0px 4px 4px rgba(50, 50, 71, 0.08),
-    0px 4px 8px rgba(50, 50, 71, 0.06);
+  box-shadow: var(--box-shadow);
 }
 
 .search-form__serch-input {
@@ -27,6 +26,25 @@
 }
 
 .search-form__serch-input:focus-visible {
+  outline: none;
+}
+
+.search-form__reset-btn {
+  background: inherit;
+  background-image: url(../../images/icon__close_black.svg);
+  background-size: 20px;
+  background-position: center;
+  background-repeat: no-repeat;
+  border: none;
+  cursor: pointer;
+  padding: 0 20px;
+}
+
+.search-form__reset-btn:hover {
+  opacity: var(--hover-opacity);
+}
+
+.search-form__reset-btn:focus-visible {
   outline: none;
 }
 
@@ -59,9 +77,8 @@
   display: block;
   border-radius: var(--border-radius-l);
   position: relative;
-  text-wrap: nowrap;
-  box-shadow: 0px 4px 4px rgba(50, 50, 71, 0.08),
-    0px 4px 8px rgba(50, 50, 71, 0.06);
+  white-space: nowrap;
+  box-shadow: var(--box-shadow);
   margin-top: 26px;
 }
 
